# active-record-for-abl

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  ara-cli.toml  connect.pf  extract-schema.p  progress-orm-generate.p  test_orderline.p
src/: main.rs
src/cli/: args.rs  commands.rs
src/config/: settings.rs
src/generator/: class_generator.rs  method_generator.rs  mod.rs
src/generator/templates/: class.cls.hbs  load_methods.hbs  methods.hbs  utilities.hbs
src/schema/: models.rs  parser.rs
src/utils/: mod.rs  type_mapping.rs
